--- a/app/src/main/res/layout/fragment_blue.xml
+++ b/app/src/main/res/layout/fragment_blue.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RedFragment"
-    android:background="#F30910">
+    tools:context=".BlueFragment"
+    android:background="#1434E3">
 
 
 
