--- a/app/src/main/res/layout/fragment_yellow.xml
+++ b/app/src/main/res/layout/fragment_yellow.xml
@@ -3,9 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RedFragment"
-    android:background="#F30910">
-
+    tools:context=".YellowFragment"
+    android:background="#F8DF07">
 
 
 </FrameLayout>
